@@ -30,11 +30,11 @@ import org.apache.commons.lang3.StringUtils;
 public class NumberUtils {
     
     /** Reusable Long constant for zero. */
-    public static final Long LONG_ZERO = new Long(0L);
+    public static final Long LONG_ZERO = Long.valueOf(0L);
     /** Reusable Long constant for one. */
-    public static final Long LONG_ONE = new Long(1L);
+    public static final Long LONG_ONE = Long.valueOf(1L);
     /** Reusable Long constant for minus one. */
-    public static final Long LONG_MINUS_ONE = new Long(-1L);
+    public static final Long LONG_MINUS_ONE = Long.valueOf(-1L);
     /** Reusable Integer constant for zero. */
     public static final Integer INTEGER_ZERO = Integer.valueOf(0);
     /** Reusable Integer constant for one. */
@@ -398,7 +398,7 @@ public class NumberUtils {
     // Integer.valueOf(String)
     // new Double(String)
     // new Byte(String)
-    // new Long(String)
+    // Long.valueOf(String)
     // Long.getLong(String)
     // Long.getLong(String,int)
     // Long.getLong(String,Integer)
